test/sema/typeck/method/multiple-matching-traits.dora
class A
trait X { fn f(); }
trait Y { fn f(); }

impl X for A { fn f() {} }
impl Y for A { fn f() {} }

fn g(a: A) { a.f(); }
